--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,5 @@
 
 [submodule "path_to_submodule"] 
-  path = githubpage/callofblood.github.io-master/callofblood.github.io-master
+  path = githubversion/kcQuests
   url = https://github.com/callofblood/kcQuests.git
+  
