chore: skip commit at scheduled updates

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,13 @@ jobs:
           python ./py/allinone.py
           git config --global user.email 353783986@qq.com
           git config --global user.name callofblood
-          git add .
-          git commit -m "update" -a --allow-empty
+          # Do not proceed if there are no file differences
+          FILES_CHANGED=$(git diff-index --name-only HEAD | wc -l)
+          if [[ "$FILES_CHANGED" = "0" ]]; then
+            echo "No file changes detected."
+            exit 0
+          fi
+          git commit -m "update" -a
       - uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
