--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - run: |
-          git config --global user.email "353783986@qq.com"
-          git config --global user.name "callofblood"
           pip install requests
           pip install wikitextparser
           pip install bs4
@@ -32,6 +30,10 @@ jobs:
           git config --global user.name callofblood
           # Do not proceed if there are no file differences
           FILES_CHANGED=$(git diff-index --name-only HEAD | wc -l)
+          # DEBUG
+          git status
+          git diff-index HEAD
+          echo $FILES_CHANGED
           if [[ "$FILES_CHANGED" = "0" ]]; then
             echo "No file changes detected."
             exit 0
