--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -38,8 +38,7 @@ jobs:
     - name: Commit changes
       uses: EndBug/add-and-commit@v9
       with:
-        author_name: GitHub Actions Bot
-        author_email: <>
+        default_author: github_actions
         message: "GitHub Actions Refresh"
         add: "."
       env:
